fix marg pol example

--- a/marg_pol/marg_pol.ini
+++ b/marg_pol/marg_pol.ini
@@ -43,8 +43,6 @@ mass1 =
 mass2 =
 inclination =
 distance =
-polarization =
-coa_phase = 
 ra =
 dec =
 tc =
@@ -84,12 +82,6 @@ name = uniform_radius
 min-distance = 100
 max-distance = 1000
 
-[prior-polarization]
-name = uniform_angle
-
-[prior-coa_phase]
-name = uniform_angle
-
 [prior-inclination]
 name = sin_angle
 
@@ -104,5 +96,5 @@ min-spin2z = -1.0
 max-spin2z = 1.0
 
 [sampler]
-name = dynesty
-nlive = 100
+name = nessai
+nlive = 500
